solve the horizontal scroll

--- a/style.css
+++ b/style.css
@@ -134,6 +134,8 @@ article ul {
 
 .recent-works {
   display: grid;
+  width: 90%;
+  margin: 0 auto;
 }
 
 h2.title {
@@ -149,10 +151,11 @@ h2.title {
 }
 
 img.vector {
-  width: 327px;
+  width: 37px;
   height: 0;
   border: 1px solid #212121;
   margin: 0 24px 80px 24px;
+  background-color: #505f79;
 }
 
 img.themes {
@@ -200,7 +203,7 @@ button:active {
   background-image: url(./images/Bg\ Placeholder.png);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 80%;
+  width: 90%;
   height: 380px;
   margin: 24px 24px;
 }
@@ -357,6 +360,11 @@ span {
   margin-right: 10px;
 }
 
+.interest {
+  text-align: center;
+  width: 95%;
+}
+
 #name,
 #email {
   width: 327px;
@@ -369,6 +377,8 @@ span {
   margin-bottom: 14px;
   font-size: 15px;
   line-height: 24px;
+  display: block;
+  margin:  0 auto;
 }
 
 #message {
@@ -377,6 +387,8 @@ span {
   font-family: inherit;
   padding: 12px;
   background-color: #e5e5e5;
+  display: block;
+  margin:  0 auto;
 }
 
 .submit-btn {
